Create temporal ban. fix serialization, mistakes in a bundle